Compilado ETC2 Completo

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Web.loader.js";
+      var loaderUrl = buildUrl + "/TerritorioAventurasWebDeploy.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Web.data.gz",
-        frameworkUrl: buildUrl + "/Web.framework.js.gz",
-        codeUrl: buildUrl + "/Web.wasm.gz",
+        dataUrl: buildUrl + "/TerritorioAventurasWebDeploy.data.gz",
+        frameworkUrl: buildUrl + "/TerritorioAventurasWebDeploy.framework.js.gz",
+        codeUrl: buildUrl + "/TerritorioAventurasWebDeploy.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TerritorioAventuras",
