Compilado Player Setting: Publishing settings: Compression format: Brotli

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TerritorioAventurasWebDeploy.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TerritorioAventurasWebDeploy.data.gz",
-        frameworkUrl: buildUrl + "/TerritorioAventurasWebDeploy.framework.js.gz",
-        codeUrl: buildUrl + "/TerritorioAventurasWebDeploy.wasm.gz",
+        dataUrl: buildUrl + "/TerritorioAventurasWebDeploy.data.br",
+        frameworkUrl: buildUrl + "/TerritorioAventurasWebDeploy.framework.js.br",
+        codeUrl: buildUrl + "/TerritorioAventurasWebDeploy.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TerritorioAventuras",
