Compression format: Disabled

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TerritorioAventurasWebDeploy.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TerritorioAventurasWebDeploy.data.br",
-        frameworkUrl: buildUrl + "/TerritorioAventurasWebDeploy.framework.js.br",
-        codeUrl: buildUrl + "/TerritorioAventurasWebDeploy.wasm.br",
+        dataUrl: buildUrl + "/TerritorioAventurasWebDeploy.data",
+        frameworkUrl: buildUrl + "/TerritorioAventurasWebDeploy.framework.js",
+        codeUrl: buildUrl + "/TerritorioAventurasWebDeploy.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TerritorioAventuras",
